# BOMnet

./: .gitignore  Makefile  README.md  bomer.yaml  config.yaml  pyproject.toml
data/: sample_bom.csv  suppliers.json
src/: compliance_checker.py  cost_analysis.py  data_loader.py  llm_optimizer.py  main.py  report_generator.py
src/bomer/: __init__.py  api.py  cli.py
src/bomer/core/: config.py  exceptions.py  loader.py  schema.py
src/bomer/engines/: cost.py  models.py  optimizer.py  risk.py
src/bomer/reporting/: report_writer.py
tests/: test_compliance_checker.py  test_cost.py  test_cost_analysis.py  test_data_loader.py  test_llm_optimizer.py  test_risk.py  test_schema.py
